syntax = "proto3";

package ai.lzy.v1;

option java_outer_classname = "IAM";
option java_package = "ai.lzy.v1";

message UserCredentials {
  string userId = 1;
  string token = 2;
}

message TaskCredentials {
  string taskId = 1;
  string servantId = 2;
  string servantToken = 3;
}

message Auth {
  oneof credentials {
    UserCredentials user = 1;
    TaskCredentials task = 2;
  }
}

message Empty {}